--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
 .pswp__shutter-speed {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
   color: #fff;
   height: auto;
@@ -8,10 +8,11 @@
   margin-right: 15px;
   display: flex;
   gap: 4px;
+  opacity: 0.85;
 }
 
 .pswp__aperture {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
   color: #fff;
   height: auto;
@@ -20,10 +21,11 @@
   margin-right: 8px;
   display: flex;
   gap: 4px;
+  opacity: 0.85;
 }
 
 .pswp__focal-length {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
   color: #fff;
   height: auto;
@@ -32,10 +34,11 @@
   margin-right: 8px;
   display: flex;
   gap: 4px;
+  opacity: 0.85;
 }
 
 .pswp__time {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
   color: #fff;
   height: auto;
@@ -44,6 +47,20 @@
   margin-right: 8px;
   display: flex;
   gap: 4px;
+  opacity: 0.85;
+}
+
+.pswp__iso {
+  font-size: 14px;
+  line-height: 1;
+  color: #fff;
+  height: auto;
+  align-self: center;
+  text-shadow: 1px 1px 3px black;
+  margin-right: 8px;
+  display: flex;
+  gap: 4px;
+  opacity: 0.85;
 }
 
 #aperture_icon {
@@ -52,5 +69,6 @@
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
-
+  opacity: 0.85;
+  filter: drop-shadow( 1px 1px 3px rgba(0, 0, 0, .7));
 }
